--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.2.0",
     "expres": "^0.0.5"
   },
   "devDependencies": {
